package com.directi.training.ocp.exercice_refactored;

public class SpaceSlot extends Ressource {

  @Override
  public void markFree(int resourceId) {
  }

  @Override
  public void markBusy(int resourceId) {
  }

  @Override
  public int findFree() {
    return 0;
  }
}
